# EUI-NEO

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md
.github/workflows/: release.yml
3rd/: README.md  dependencies.cmake
components/: barchart.h  carousel.h  checkbox.h  components.h  input.h  linechart.h  piechart.h  radio.h  sidebar.h  slider.h  switch.h  text.h  theme.h  tooltip.h
core/: animation.h  dsl.h  dsl_runtime.h  ime_bridge.c  platform.cpp  platform.h
core/app/: app_runner.h  dsl_window_manager.h  dsl_window_runtime.h  glfw_app_main.cpp  main_window_runtime.h  sdl2_app_main.cpp
core/input/: input_state.h  input_types.h
core/platform/: async.cpp  event.h  ime_bridge.c  ime_bridge.h  native_bridge.c  native_bridge.h  network.cpp  platform.cpp  platform.h  tray_bridge.c  tray_bridge.h  window_backend.cpp  window_backend.h
core/render/: image.cpp  image.h  image_source.cpp  primitive.cpp  primitive.h  primitive_geometry.h  render_backend.h  render_types.h  text.cpp  text.h
core/render/opengl/: opengl_backend.cpp
core/render/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_cache.cpp  vulkan_render_cache_resolve_shaders.h
core/render/vulkan/shaders/: render_cache_resolve.frag  render_cache_resolve.vert
core/runtime/: runtime_animation.h  runtime_hit_test.h  runtime_instances.h  runtime_render.h  runtime_update.h
docs/: DSL.md  Review清单.md  SKILL.md  retained_layer_cache.md  事件.md  动画.md  图片.md  基础图元文本图元.md  平台能力.md  开发与发布.md  渲染后端架构.md  渲染流程.md  稳定版路线图.md  窗口页面.md  组件.md  网络.md  集成指南.md
examples/: calculator.cpp  clock.cpp  demo.cpp  gallery.cpp  lms_dashboard.cpp  serial_tool.cpp  telegram_chat.cpp
examples/pages/: gallery_about.h  gallery_animation.h  gallery_bing.h  gallery_controls.h  gallery_settings.h  gallery_style.h
include/: eui_neo.h
include/eui/: app.h  async.h  dsl.h  dsl_app.h  image.h  network.h  platform.h  types.h  window.h
include/eui/detail/: dsl_app_impl.h
tests/consumers/find-package/: CMakeLists.txt
tests/unit/: image_path_resolution.cpp
